--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@ footer a{ color:#ffc107; text-decoration:none; margin:0 5px; }
 <body>
 
 <header>
-  <h1>Skillionair</h1>
+  <img src="image2.png" alt="Skillionair Logo" style="height: 100px; width:auto;">
   <nav>
     <a onclick="showSection('home')">Home</a>
     <a onclick="showSection('about')">About</a>
@@ -306,6 +306,7 @@ footer a{ color:#ffc107; text-decoration:none; margin:0 5px; }
     <a onclick="showSection('contact')">Contact</a>
   </nav>
 </header>
+
 
 <!-- HOME SECTION -->
 <section id="home" class="active">
